--- a/site/public/scss/style.scss
+++ b/site/public/scss/style.scss
@@ -12,22 +12,33 @@ header.gnb {
   left: 0;
   width: 100%;
   height: $gnbHeight;
-  padding: 10px;
   display: flex;
   justify-content: space-between;
   background-color: var(--bgc);
   border-bottom: 1px solid var(--brd);
   z-index: 999;
+  nav {
+    order: 1;
+  }
   .logo {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translate(0, -50%);
+    // position: absolute;
+    // top: 50%;
+    // left: 0;
+    // transform: translate(0, -50%);
     padding: 0 10px;
+    order: 0;
   }
   .toggle-menu {
     display: none;
   }
+}
+
+.header-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
 }
 
 header.gnb .logo {
@@ -43,9 +54,16 @@ header.gnb .logo {
     opacity: .8;
   }
 }
-h1 {
-  font-family: Ubuntu;
+.cell {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
+// h1 {
+//   font-family: Ubuntu;
+// }
+
+
 
 .error-container {
   width :100%;
@@ -109,6 +127,32 @@ h1 {
     max-width: 100%;
     height: 100%;
     overflow-y: auto;
+  }
+  .page-wrapper {
+    .page-header {
+      padding: 0 20px;
+      text-align: center;
+      margin-bottom: 50px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      line-height: 1.4;
+    }
+    .page-icon {
+      font-size: 6em;
+      
+    }
+    .page-title {
+      font-size: 3em;
+      font-weight: 300;
+      margin-bottom: 10px;
+    }
+    .page-desc {
+      padding: 0px 30px;
+      font-size: 18px;
+      font-weight: 300;
+      color: #999999;
+    }
   }
 }
 .side-menu {
@@ -239,13 +283,12 @@ section {
   }
 }
 #custom-theme {
-  padding: 150px 40px;
+  padding: 50px 40px;
   .user-custom-theme {
-    h1, p {
-      text-align: center;
-    }
+    text-align: center;
   }
   .select-css {
+    padding: 10px 0;
     .option-item {
       padding: 10px;
     }
@@ -293,6 +336,14 @@ section {
     }
   }
 }
+.ga-grid2 > .column {
+  padding: 20px;
+  border-radius: 16px;
+  border: 1px solid var(--brd);
+  .title {
+    margin-bottom: 10px;
+  }
+}
 #colors {
   .color-item {
     text-align: center;
@@ -315,7 +366,6 @@ section {
   }
 }
 #grid {
-  .ga-grid2:not(.tabled) > .column,
   .ga-grid > .rows .column,
   .ga-grid > .column {
     &:after {
@@ -327,6 +377,19 @@ section {
       display: block;
       box-shadow: 0 0 0 1px var(--brd) inset;
       min-height: 50px;
+    }
+  }
+  .ga-grid2:not(.tabled) > .column {
+    &:after {
+      content: '';
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      background-color: var(--suf);
+      display: block;
+      box-shadow: 0 0 0 1px var(--brd) inset;
+      min-height: 50px;
+      border-radius: 8px;
     }
   }
 }
@@ -345,15 +408,6 @@ section {
     }
   }
 }
-//#tabs {
-//  .ga-tabs {
-//    .tab-menu {
-//      .tab-item {
-//        padding: 4px 12px;
-//      }
-//    }
-//  }
-//}
 
 #selectbox {
   .select-menu {
@@ -407,7 +461,7 @@ section {
     }
   }
 }
-
+.ga-segment,
 .ga-card {
   .footer {
     background-color: var(--suf);
@@ -428,9 +482,7 @@ section pre {
   margin: 0 !important;
   // padding: 40px !important;
 }
-.code-wrapper {
-  // background-color: var(--suf);
-}
+
 
 /* Extra Small Mobile */
 // @media (max-width: 359px) {
@@ -441,7 +493,9 @@ section pre {
 @media (max-width: 599px) {
   header.gnb {
     .logo {
+      position: absolute;
       text-align: center;
+      top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
     }
