--- a/site/views/components/badge.pug
+++ b/site/views/components/badge.pug
@@ -12,7 +12,7 @@ block contents
                     p Small visual indicators showing counts or statuses.
             .section-contents
                 h4.contents-title 기본
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button
                             | Badge
@@ -40,7 +40,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title 타입
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button
                             | Float
@@ -59,7 +59,7 @@ block contents
                                     | #{code1}
             .section-contents
                 h4.contents-title 원과 함꼐
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button.icon.circle
                             i.xi-star
@@ -76,7 +76,7 @@ block contents
                                     | #{code1}
             .section-contents
                 h4.contents-title 텍스트 사용
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button
                             | First
@@ -94,7 +94,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title 그림자
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button
                             | 그림자
@@ -111,7 +111,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title 정렬
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button
                             | Left
@@ -129,7 +129,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title 색상
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button
                             | Red
