--- a/site/views/components/base.pug
+++ b/site/views/components/base.pug
@@ -12,7 +12,7 @@ block contents
                     p Core design foundations like font sizes, spacing, weight and Heading System.
             .section-contents
                 h4 Typography
-                .ga-card
+                .ga-segment.float.round-xl
                     .contents
                         .ga-tag.label.primary
                             i.icon.left.xi-at
@@ -29,7 +29,7 @@ block contents
                                     p 가나다라마바사
             .section-contents
                 h4 Weight
-                .ga-card
+                .ga-segment.float.round-xl
                     .contents
                         .contents-wrapper
                             table.ga-table
@@ -58,7 +58,7 @@ block contents
 
             .section-contents
                 h4 Letter Spacing
-                .ga-card
+                .ga-segment.float.round-xl
                     .contetns
                         .contents-wrapper
                             table.ga-table
@@ -96,7 +96,7 @@ block contents
                                         td.spacing-narrower Frontend Renders On Grid. 
             .section-contents
                 h4.header Heading
-                .ga-card
+                .ga-segment.float.round-xl
                     .contents
                         .contents-wrapper
                             h1.header [H1] Frontend Renders On Grid. (28px)
@@ -106,7 +106,7 @@ block contents
                             h5.header [H5] Frontend Renders On Grid. (14px)
             .section-contents
                 h4 Size
-                .ga-card
+                .ga-segment.float.round-xl
                     .contents
                         .contents-wrapper
                             .ga-button.tiny Tiny
