--- a/site/views/components/calendar.pug
+++ b/site/views/components/calendar.pug
@@ -12,7 +12,7 @@ block contents
           p Date picker and scheduling UI component.
       .section-contents
         h4 기본
-        .ga-card.attached
+        .ga-segment.float.round-xl.attached
           .contents-wrapper.flex-wrap
             .ga-calendar
               .calendar-header 
