--- a/site/views/components/checkbox.pug
+++ b/site/views/components/checkbox.pug
@@ -12,7 +12,7 @@ block contents
                     p Multi-select input with accessible and clear visual states.
             .section-contents
                 h4.contents-title 기본
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-checkbox
                             input(type="checkbox")
@@ -35,7 +35,7 @@ block contents
                                     | #{code1}
             .section-contents
                 h4.contents-title Check Box
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-checkbox
                             input(type="checkbox")
@@ -48,7 +48,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Check Box
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper.check1
                         .ga-checkbox
                             input(type="checkbox", name="part")
@@ -66,7 +66,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Radio
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-checkbox.radio
                             input(type="radio", name="option")
