--- a/site/views/components/grid.pug
+++ b/site/views/components/grid.pug
@@ -12,7 +12,7 @@ block contents
                     p Layout utility using CSS Grid for structured alignment.(Flex)
             .section-contents
                 h4.contents-title 기본
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-grid.divide
                             each col in [1, 2, 3, 4, 5, 6]
@@ -26,7 +26,7 @@ block contents
                                 | #{code}
             .section-contents
                 h4.contents-title 균등 분할
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-grid.divide-2
                             .column
@@ -43,7 +43,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title  분할 구성
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-grid.right-side
                             .rows
