--- a/site/views/components/list.pug
+++ b/site/views/components/list.pug
@@ -12,7 +12,7 @@ block contents
                     p Structured list styling for displaying repeated content.  
             .section-contents
                 h4.contents-title 기본
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-list
                             .item(draggable="true") Option 1
@@ -39,7 +39,7 @@ block contents
                                 | #{code_f}
             .section-contents
                 h4.contents-title List Style
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-list.ul
                             li.item Option 1
@@ -62,7 +62,7 @@ block contents
                                     | #{code_f}
             .section-contents
                 h4.contents-title 선택된 아이템
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-list.selection
                             .item.selected Option 1
@@ -85,7 +85,7 @@ block contents
                                     | #{code_f}
             .section-contents
                 h4.contents-title Sub Title
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-list
                             .item
@@ -117,7 +117,7 @@ block contents
                                     | #{code_f}
             .section-contents
                 h4.contents-title Icons
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-list.selection
                             .item
@@ -148,7 +148,7 @@ block contents
                                     | #{code_f}
             .section-contents
                 h4.contents-title Icons
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-list
                             .item
@@ -167,7 +167,7 @@ block contents
                                 .item-title Option 3
             .section-contents
                 h4.contents-title Bordered
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-list.bordered
                             .item Option 1
@@ -190,7 +190,7 @@ block contents
                                     | #{code_f}
             .section-contents
                 h4.contents-title Image
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-list
                             .item
