--- a/site/views/components/message.pug
+++ b/site/views/components/message.pug
@@ -12,7 +12,7 @@ block contents
                     p Informational, warning, or error messages for user feedback.
             .section-contents
                 h4.contents-title 기본
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-message contents
                         .ga-message 
@@ -25,7 +25,7 @@ block contents
                                 | #{code}
             .section-contents
                 h4.contents-title 상태
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-message.success Success
                         .ga-message.danger Danger
