--- a/site/views/components/pagination.pug
+++ b/site/views/components/pagination.pug
@@ -12,7 +12,7 @@ block contents
                     p UI for navigating through multiple pages of content. 
             .section-contents
                 h4.contents-title 기본
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-pagination
                             - var items = [2, 3, 4, 5, 6, 7, 8, 9, 10]
@@ -45,7 +45,7 @@ block contents
                                 | #{code_f}
             .section-contents
                 h4.contents-title 기본 (표시 수 제한)
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-pagination
                             - var items = [2, 3, 4]
@@ -91,7 +91,7 @@ block contents
                                 | #{code_f}
             .section-contents
                 h4.contents-title 버튼 스타일
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-pagination.number.circle
                             - var items = [2, 3, 4, 5, 6, 7, 8, 9, 10]
@@ -122,7 +122,7 @@ block contents
                                 | #{code_f}
             .section-contents
                 h4.contents-title 사용자 스타일
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-pagination.number
                             - var items = [2, 3, 4]
@@ -158,7 +158,7 @@ block contents
                                 | #{code_f}
             .section-contents
                 h4.contents-title 페이지 타입
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-pagination.page
                             .pagination-nav.pagination-item
@@ -186,7 +186,7 @@ block contents
                                 | #{code_f}
             .section-contents
                 h4.contents-title 조그맣게
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-pagination.compact.number
                             - var items = [2, 3, 4, 5, 6, 7, 8, 9, 10]
@@ -217,7 +217,7 @@ block contents
                                 | #{code_f}
             .section-contents
                 h4.contents-title 정렬
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     - var items = [2, 3, 4, 5]
                     .contents-wrapper
                         h5 LEFT
