--- a/site/views/components/switch.pug
+++ b/site/views/components/switch.pug
@@ -12,7 +12,7 @@ block contents
                     p Toggle-style input for on/off states with smooth transitions.
             .section-contents
                 h4.contents-title 기본 타입 1
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         label.ga-switch.slide
                             input(type="checkbox", checked)
@@ -24,7 +24,7 @@ block contents
                                 | #{code}
             .section-contents
                 h4.contents-title 기본 타입 2
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         label.ga-switch.slide.inside
                             input(type="checkbox", checked)
@@ -36,7 +36,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title 둥그라미
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         label.ga-switch.slide.inside
                             input(type="checkbox", checked)
@@ -52,7 +52,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title 버튼
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         label.ga-switch.button
                             input(type="checkbox", checked)
