--- a/site/views/components/tabs.pug
+++ b/site/views/components/tabs.pug
@@ -12,7 +12,7 @@ block contents
                     p UI for toggling between content sections in a tabbed layout. 
             .section-contents
                 h4.contents-title 기본
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-tabs
                             .tab-menu
@@ -42,7 +42,7 @@ block contents
                                 | #{code_1_f}
             .section-contents
                 h4.contents-title Vertical
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-tabs.vertical
                             .tab-menu
@@ -70,7 +70,7 @@ block contents
                                 | #{code_1_f}
             .section-contents
                 h4.contents-title Active (Line)
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-tabs.line
                             .tab-menu
@@ -106,7 +106,7 @@ block contents
                                 | #{code_1_f}
             .section-contents
                 h4.contents-title Active (Button)
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-tabs.button
                             .tab-menu
@@ -138,7 +138,7 @@ block contents
                                 | #{code_1_f}
             .section-contents
                 h4.contents-title Browser Tab
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-tabs.browser
                             - var tabMenu = [1, 2, 3, 4, 5]
