--- a/site/views/components/tag.pug
+++ b/site/views/components/tag.pug
@@ -12,7 +12,7 @@ block contents
                     p Compact label elements used for status indicators or filters. 
             .section-contents
                 h4.contents-title 기본
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-tag.label Standard
                         .ga-tag.label 라벨
@@ -46,7 +46,7 @@ block contents
                                     | #{code2}
             .section-contents
                 h4.contents-title icon (only label type)
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-tag.label
                             i.icon.left.xi-angle-left
@@ -77,7 +77,7 @@ block contents
                                     | #{code1}
             .section-contents
                 h4.contents-title Pointing
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-tag.label.pointing.left
                             i.icon.left.xi-angle-left
@@ -108,7 +108,7 @@ block contents
                                     | #{code3}
             .section-contents
                 h4.contents-title kbd
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-tag.label.kbd.enter
                             | Enter
@@ -135,7 +135,7 @@ block contents
                                     | #{code3}
             .section-contents
                 h4.contents-title Tags
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-tags
                             .ga-tag.label.red red
@@ -148,7 +148,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Hover Effect
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-tags.one-of-a-kind
                             .ga-tag.label.blue blue
@@ -162,7 +162,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Brand Colors
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-tag.label.primary Primary
                         .ga-tag.label.secondary Secondary
@@ -178,7 +178,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Colors
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-tag.label.red Red
                         .ga-tag.label.orange Orange
