--- a/site/views/components/toast.pug
+++ b/site/views/components/toast.pug
@@ -12,13 +12,13 @@ block contents
                     p Temporary, auto-dismissable message for quick user feedback.
             .section-contents
                 h4.contents-title 기본
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper.ex_toast_board
                         .toast.ga-success
                             .toast-contents success
             .section-contents
                 h4.contents-title 닫기 버튼 사용
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper.ex_toast_board
                         .toast.ga-success
                             .toast-contents success
@@ -26,7 +26,7 @@ block contents
                                 i.xi-close
             .section-contents
                 h4.contents-title 아이콘 표시
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper.ex_toast_board
                         .toast.ga-success
                             .toast-icon
@@ -54,7 +54,7 @@ block contents
                             .toast-contents Importance
             .section-contents
                 h4.contents-title 동그랗게
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper.ex_toast_board
                         .toast.ga-success.round
                             .toast-icon
@@ -64,7 +64,7 @@ block contents
                                 i.xi-close
             .section-contents
                 h4.contents-title 스타일
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper.ex_toast_board
                         .toast.ga-success
                             .toast-icon
@@ -97,7 +97,7 @@ block contents
                                 i.xi-close
             .section-contents
                 h4.contents-title 테스트
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper.open-btn
                         div.ga-tag.label.success success
                         div.ga-tag.label.info info
