--- a/site/views/lnb.pug
+++ b/site/views/lnb.pug
@@ -1,6 +1,6 @@
 - var path = '/'
 - var selected = title?.toLowerCase()
-- var menuItems = ['base', 'colors', 'button', 'input', 'tag', 'checkbox', 'switch', 'badge', 'form', 'list', 'selectbox', 'message', 'tabs', 'cards', 'table', 'pagination', 'panel', 'grid', 'grid2', 'calendar', 'modal', 'toast']
+- var menuItems = ['base', 'colors', 'button', 'input', 'tag', 'checkbox', 'switch', 'badge', 'form', 'list', 'selectbox', 'message', 'tabs', 'cards', 'segments', 'table', 'pagination', 'panel', 'grid', 'grid2', 'calendar', 'modal', 'toast']
 
 .ui-list
     .menu-header 
