--- a/src/frogui.scss
+++ b/src/frogui.scss
@@ -21,6 +21,7 @@
 @import './definitions/components/calendar';
 @import './definitions/components/table';
 @import './definitions/components/panel';
+@import './definitions/components/segment';
 @import './definitions/components/modal';
 @import './definitions/components/toast';
 @import './definitions/components/card';
