--- a/src/gcloud.scss
+++ b/src/gcloud.scss
@@ -1,3 +1,28 @@
+// @forward './definitions/bases/root';
+// @forward './definitions/bases/variables';
+
+// @forward './definitions/components/button';
+// @forward './definitions/components/input';
+// @forward './definitions/components/checkbox';
+// @forward './definitions/components/switch';
+// @forward './definitions/components/grid';
+// @forward './definitions/components/grid2';
+// @forward './definitions/components/form';
+// @forward './definitions/components/tag';
+// @forward './definitions/components/badge';
+// @forward './definitions/components/message';
+// @forward './definitions/components/selectbox';
+// @forward './definitions/components/list';
+// @forward './definitions/components/tabs';
+// @forward './definitions/components/pagination';
+// @forward './definitions/components/calendar';
+// @forward './definitions/components/table';
+// @forward './definitions/components/panel';
+// @forward './definitions/components/segment';
+// @forward './definitions/components/modal';
+// @forward './definitions/components/toast';
+// @forward './definitions/components/card';
+
 @import "./theme.gcloud.scss";
 /*Base*/
 @import './definitions/bases/reset';
@@ -20,6 +45,7 @@
 @import './definitions/components/calendar';
 @import './definitions/components/table';
 @import './definitions/components/panel';
+@import './definitions/components/segment';
 @import './definitions/components/modal';
 @import './definitions/components/toast';
 @import './definitions/components/card';
