--- a/site/views/components/button.pug
+++ b/site/views/components/button.pug
@@ -13,7 +13,7 @@ block contents
                     p Interactive buttons with variants for size, color, and state.
             .section-contents
                 h4.contents-title 기본
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button 기본
                     .footer
@@ -22,7 +22,7 @@ block contents
                                 code.language-markup #{code}
             .section-contents
                 h4.contents-title Element Type
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         button.ga-button 태그
                         .ga-button 클레스
@@ -35,7 +35,7 @@ block contents
                                 | #{code2}
             .section-contents
                 h4.contents-title Brand Color
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         button.ga-button.primary 메인
                         button.ga-button.secondary 강조
@@ -62,7 +62,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Colors
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     - var colors1 = [{name: 'red', text: '빨강'},{name: 'orange', text: '주황'},{name: 'yellow', text: '노랑'},{name: 'lightgreen', text: '연두'},{name: 'green', text: '초록'},{name: 'lightblue', text: '하늘'},{name: 'blue', text: '파랑'}];
                     - var colors2 = [{name: 'deepblue', text: '짙은파랑'},{name: 'deeppurple', text: '짙은보라'},{name: 'purple', text: '보라'},{name: 'brown', text: '팥색'},{name: 'gray', text: '회색'}];
                         .contents-wrapper
@@ -84,7 +84,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Disabled
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button.disabled Disabled
                         .ga-button(disabled) Disabled(attr)
@@ -97,7 +97,7 @@ block contents
                                     | #{code1}
             .section-contents
                 h4.contents-title Border
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button.border Border
                         .ga-button.primary.border Border(Primary)
@@ -110,7 +110,7 @@ block contents
                                     | #{code1}
             .section-contents
                 h4.contents-title Equal
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .contents-item
                             .ga-button.equal.primary 저장
@@ -131,7 +131,7 @@ block contents
                                     | #{code1}
             .section-contents
                 h4.contents-title Fluid
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-item
                         .ga-button.fluid.primary 꽉차게
                     .contents-item
@@ -147,7 +147,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Compact
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button.compact.primary 조그맣게
                         .ga-button.compact 조그맣게
@@ -171,7 +171,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Outline
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button.outline 테두리
                     .footer
@@ -181,7 +181,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Icon (* required - Xeicon 2.3.3)
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button.icon
                             i.xi-laptop
@@ -196,7 +196,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Circle
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button.icon.circle
                             i.xi-desktop
@@ -210,7 +210,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Icon
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button
                             i.icon.left.xi-angle-left
@@ -227,7 +227,7 @@ block contents
                                     | #{code1}
             .section-contents
                 h4.contents-title With Badge
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-button.badge
                             | Best
@@ -244,7 +244,7 @@ block contents
                                     | #{code0}
             .section-contents
                 h4.contents-title Text
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-grid
                             .column.span-4.span-xs-6
@@ -270,7 +270,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Buttons
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-buttons
                             .ga-button.selected 재생
