--- a/site/views/components/cards.pug
+++ b/site/views/components/cards.pug
@@ -5,46 +5,124 @@ block title
 
 block contents
     .page-wrapper
-        section#tabs
+        section#cards
             .section-title
                 h1= title
                 .section-desc 
                     p Content containers for grouping text, images, and actions.
             .section-contents
                 h4.contents-title 기본
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper.contents
-                        .ga-card
+                        .ga-card.border
                             .contents
                                 | Contents 영역         
                     .footer
                         .code-wrapper
-                            - var code = `\n<div class=\"ga-card\">\n       <!-- insert contents -->\n  </div>\n`
+                            - var code = `\n<div class=\"ga-card border\">\n       <div class=\"contents\"><!-- insert contents --></div>\n  </div>\n`
                             pre
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Title
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper.contents
-                        .ga-card 
+                        .ga-card.border
                             .title Title
                             .contents Contents 영역
                     .footer 
                         .code-wrapper
-                            - var code = `\n<div class=\"ga-card\">\n       <div class=\"title\">Title</div>\n       <!-- insert contents -->\n  </div>\n`
+                            - var code = `\n<div class=\"ga-card border\">\n       <div class=\"title\">Title</div>\n       <div class=\"contents\"><!-- insert contents --></div>\n  </div>\n`
+                            pre
+                                code.language-markup= code
+            .section-contents
+                h4.contents-title Image
+                .ga-segment.float.round-xl.attached
+                    .contents-wrapper.contents
+                        .ga-card.border.image
+                            .image
+                                img(src="/img/profile_img.png", alt="profile")
+                            .title Title
+                            .contents Contents 영역
+                    .footer 
+                        .code-wrapper
+                            - var code = `\n<div class=\"ga-card border image\">\n       <div class=\"image\"><img src="..." alt="..." /></div>\n       <div class=\"title\">Title</div>\n       <div class=\"contents\"><!-- insert contents --></div>\n  </div>\n`
+                            pre
+                                code.language-markup= code
+            .section-contents
+                h4.contents-title Extra
+                .ga-segment.float.round-xl.attached
+                    .contents-wrapper.contents
+                        .ga-card.border.extra
+                            .title Title
+                            .contents Contents 영역
+                            .extra 
+                                | Extra
+                    .footer 
+                        .code-wrapper
+                            - var code = `\n<div class=\"ga-card border extra\">\n       <div class=\"title\">Title</div>\n       <div class=\"contents\"><!-- insert contents --></div>\n       <div class=\"extra\">Extra</div>\n  </div>\n`
                             pre
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Attached (header, footer)
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper.contents
-                        .ga-card.attached 
-                            .header 
-                                .title Header 영역
+                        .ga-card.border.attached 
+                            .header Header 영역
+                            .title Header 영역
                             .contents Contents 영역
                             .footer Footer 영역
                     .footer 
                         .code-wrapper
-                            - var code = `\n<div class=\"ga-card\"></div>\n    <div class=\"header\">Header contents</div>\n    <!-- contents -->\n    <div class=\"footer\">Footer contents</div>\n</div>\n`
+                            - var code = `\n<div class=\"ga-card border attached\"></div>\n    <div class=\"header\">Header contents</div>\n    <div class=\"contents\"><!-- insert contents --></div>\n    <div class=\"footer\">Footer contents</div>\n</div>\n`
+                            pre
+                                code.language-markup= code
+            .section-contents
+                h4.contents-title Border
+                .ga-segment.float.round-xl.attached
+                    .contents-wrapper.contents
+                        .ga-card.border
+                            .contents
+                                | Contents 영역         
+                    .footer
+                        .code-wrapper
+                            - var code = `\n<div class=\"ga-card border\">\n       <div class=\"contents\"><!-- insert contents --></div>\n  </div>\n`
+                            pre
+                                code.language-markup= code
+            .section-contents
+                h4.contents-title Float
+                .ga-segment.float.round-xl.attached
+                    .contents-wrapper.contents
+                        .ga-card.float
+                            .contents
+                                | Contents 영역         
+                    .footer
+                        .code-wrapper
+                            - var code = `\n<div class=\"ga-card float\">\n       <div class=\"contents\"><!-- insert contents --></div>\n  </div>\n`
+                            pre
+                                code.language-markup= code
+            .section-contents
+                h4.contents-title Cards
+                .ga-segment.float.round-xl.attached
+                    .contents-wrapper.contents
+                        .ga-cards
+                            .ga-card.border
+                                .title Card 1
+                                .contents
+                                    | Contents 영역         
+                            .ga-card.border
+                                .title Card 2
+                                .contents
+                                    | Contents 영역         
+                            .ga-card.border
+                                .title Card 3
+                                .contents
+                                    | Contents 영역         
+                            .ga-card.border
+                                .title Card 4
+                                .contents
+                                    | Contents 영역         
+                    .footer
+                        .code-wrapper
+                            - var code = `\n<div class=\"ga-cards \">\n       <!-- cards -->\n  </div>\n`
                             pre
                                 code.language-markup= code
