--- a/site/views/components/colors.pug
+++ b/site/views/components/colors.pug
@@ -12,7 +12,7 @@ block contents
                     p Defined color tokens for branding, backgrounds, and UI states. 
             .section-contents
                 h4.contents-title Brands
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .color-box.primary 메인
                         .color-box.primary.dark 어두운
@@ -33,7 +33,7 @@ block contents
 
             .section-contents
                 h4.contents-title Status
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .color-box.success 성공
                         .color-box.info 정보
@@ -56,7 +56,7 @@ block contents
                                 | #{code_state_impo}
             .section-contents
                 h4.contents-title Types
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .color-box.ga-success.bordered 기본
                         .color-box.ga-success-text 텍스트
@@ -76,7 +76,7 @@ block contents
                                 | #{code_type_brd}
             .section-contents
                 h4.contents-title Grayscale
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .color-box.small.gray-0 White (0)
                         .color-box.small.gray-5 5
@@ -106,7 +106,7 @@ block contents
                                 | #{code_type_color_100}
             .section-contents
                 h4.contents-title Palette Colors
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         - var colors = [{name: 'red', text: '빨강'},{name: 'orange', text: '주황'},{name: 'yellow', text: '노랑'},{name: 'lightgreen', text: '연두'},{name: 'green', text: '초록'},{name: 'lightblue', text: '하늘'},{name: 'blue', text: '파랑'},{name: 'deepblue', text: '짙은파랑'},{name: 'deeppurple', text: '짙은보라'},{name: 'purple', text: '보라'},{name: 'brown', text: '팥색'},{name: 'gray', text: '회색'}]
                         each color in colors
