--- a/site/views/components/form.pug
+++ b/site/views/components/form.pug
@@ -12,7 +12,7 @@ block contents
                     p Grouped input structure with labels, validation, and layout.
             .section-contents
                 h4.contents-title 기본
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-form
                             .field
@@ -25,7 +25,7 @@ block contents
                                 | #{code}
             .section-contents
                 h4.contents-title Header
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-form
                             .header
@@ -40,7 +40,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Inline
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-form
                             .field.inline
@@ -55,7 +55,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Label
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-form
                             .field
@@ -98,7 +98,7 @@ block contents
                                     | #{code1_6}
             .section-contents
                 h4.contents-title Field
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-form
                             .field
@@ -114,7 +114,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Fields
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-form
                             .fields
@@ -146,7 +146,7 @@ block contents
                                     | #{code_1_e}
             .section-contents
                 h4.contents-title Field
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-form
                             .field.disabled
@@ -162,7 +162,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Fields 균등 분할 구성
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-form
                             .field
@@ -210,7 +210,7 @@ block contents
                                     | #{code_1_e}
             .section-contents
                 h4.contents-title Fields 지정 분할 구성
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-form
                             .field
@@ -245,7 +245,7 @@ block contents
                                     | #{code_1_e}
             .section-contents
                 h4.contents-title Text Area
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-form
                             .field
@@ -265,7 +265,7 @@ block contents
                                     | #{code1}
             .section-contents
                 h4.contents-title Check Box
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-form
                             .field
@@ -281,7 +281,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Radio Button
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-form
                             .field
@@ -321,7 +321,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Select Box
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-form
                             .field
