--- a/site/views/components/grid2.pug
+++ b/site/views/components/grid2.pug
@@ -12,7 +12,7 @@ block contents
                     p Layout utility using CSS Grid for structured alignment.(Grid)
             .section-contents
                 h4.contents-title 기본
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-grid2.divide-column-8.row-2
                             each col in [1, 2, 3, 4, 5, 6]
@@ -25,8 +25,20 @@ block contents
                             code.language-markup
                                 | #{code}
             .section-contents
+                h4.contents-title 도시락
+                .ga-segment.float.round-xl.attached
+                    .contents-wrapper
+                        .ga-grid2.dosirak.set-rows(style="--grid-col-num: 4; --grid-row-num: 3; --rows-height: 10rem")
+                            each col in [[2, 1],[1, 1],[1, 2],[1, 1],[2, 1],]
+                                .column(class=`col-${col[0]} row-${col[1]}`)
+                    .footer
+                        - var code = `<div class="ga-grid2 divide-column-{num} row-{num}">\n    <div class="column" />\n    <div class="column" />\n    ...\n    <div class="column" />\n</div>`
+                        pre
+                            code.language-markup
+                                | #{code}
+            .section-contents
                 h4.contents-title 분할 구성
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-grid2
                             .column.col-1
@@ -48,7 +60,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title 분할 구성 (+ROW)
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-grid2.set-rows(style="--grid-row-num: 9")
                             .column.col-6.row-6
@@ -65,7 +77,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Auto-fit
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-grid2.divide-column-10.auto-fit
                             .column
@@ -78,8 +90,38 @@ block contents
                                 code.language-markup
                                     | #{code}
             .section-contents
+                h4.contents-title Auto-fit
+                .ga-segment.float.round-xl.attached
+                    .contents-wrapper
+                        .ga-grid2(style="--grid-col-num: 4; --grid-gap: 20px")
+                            .column.col-2
+                                .card
+                            .column.col-1
+                                .card
+                            .column.col-1.row-2
+                                .card
+                            .column.col-1
+                                .card
+                            .column.col-1
+                                .card
+                            .column.col-1.row-2
+                                .card
+                            .column.col-2
+                                .card
+                            .column.col-1.row-1
+                                .card
+                            .column.col-2
+                                .card
+                            .column.col-2
+                                .card
+                    .footer
+                        - var code = `<div class="ga-grid2 auto-fit">\n    <div class="column" />\n    <div class="column" />\n    ...\n    <div class="column" /> // grid column 보다 작은 column 갯수 일 때 \n</div>`
+                            pre
+                                code.language-markup
+                                    | #{code}
+            .section-contents
                 h4.contents-title  Grid + Table
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .ga-grid2.tabled.row-2
                             .column.label.col-1 이름
