--- a/site/views/components/modal.pug
+++ b/site/views/components/modal.pug
@@ -12,7 +12,7 @@ block contents
                     p Overlay dialog UI for alerts or focused interactions.
             .section-contents
                 h4.contents-title 기본
-                .ga-card
+                .ga-segment.float.round-xl
                     .contents-wrapper
                         .ga-modal
                             .modal
@@ -27,7 +27,7 @@ block contents
                                     button.ga-button.text 취소
             .section-contents
                 h4.contents-title 실행
-                .ga-card
+                .ga-segment.float.round-xl
                     .contents-wrapper
                         button.ga-button.green.show-btn SHOW MODAL
                         .ga-modal-container.ga-modal-background
