--- a/site/views/components/table.pug
+++ b/site/views/components/table.pug
@@ -13,7 +13,7 @@ block contents
             - var rows = [{name: '김아무개', age: 11, job: '학생'},{name: '이아무개', age: 17, job: '대학생'},{name: '박아무개', age: 31, job: '대학원생'},]
             .section-contents
                 h4.contents-title 기본
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         table.ga-table
                             thead
@@ -43,7 +43,7 @@ block contents
                                     | #{code_e}
             .section-contents
                 h4.contents-title Single Rows
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         table.ga-table.single
                             thead
@@ -72,7 +72,7 @@ block contents
                                     | #{code_e}
             .section-contents
                 h4.contents-title Table Label
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         .table-title Table Title
                         table.ga-table.labeled
@@ -102,7 +102,7 @@ block contents
                                     | #{code_e}
             .section-contents
                 h4.contents-title Footer + Pagination
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         table.ga-table
                             thead
@@ -146,7 +146,7 @@ block contents
                                     | #{code_e}
             .section-contents
                 h4.contents-title table with Form Element
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         table.ga-table.structured
                             tbody
@@ -200,7 +200,7 @@ block contents
                                     | #{code_e}
             .section-contents
                 h4.contents-title tables
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         table.ga-table
                             thead
@@ -238,7 +238,7 @@ block contents
             .section-contents
                 h4.contents-title table column count
                 h5.contents-desc 지정된 갯수로 균등 전체 컬럼 균등 분할 (10 단계 퍼센트 분할)
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         table.ga-table.column.three
                             thead
@@ -279,7 +279,7 @@ block contents
                                     | #{code_4}
             .section-contents
                 h4.contents-title table + grid - column width
-                .ga-card.attached
+                .ga-segment.float.round-xl.attached
                     .contents-wrapper
                         table.ga-table
                             thead
