--- a/src/definitions/bases/root.scss
+++ b/src/definitions/bases/root.scss
@@ -1,4 +1,7 @@
 @use 'sass:map';
+@use 'sass:list';
+@use 'sass:math';
+@use 'sass:color';
 
 :root {
     --bgc: #{map.get($grays, 'gray-0')};
@@ -82,33 +85,33 @@
 @function color-contrast($bg, $fg) {
     $luminance1: luminance($fg) + 0.05;
     $luminance2: luminance($bg) + 0.05;
-    $ratio: $luminance1 / $luminance2;
+    $ratio: calc($luminance1 / $luminance2);
     
     @if $luminance2 > $luminance1 {
         $ratio: 1 / $ratio;
     }
     
-    $ratio: round($ratio * 100) / 100;
+    $ratio: calc(math.round($ratio * 100) / 100);
     
     @return $ratio;
 }
 
 @function luminance($color) {
-    $red: nth(linear-rgb($color), 1);
-    $green: nth(linear-rgb($color), 2);
-    $blue: nth(linear-rgb($color), 3);
+    $red: list.nth(linear-rgb($color), 1);
+    $green: list.nth(linear-rgb($color), 2);
+    $blue: list.nth(linear-rgb($color), 3);
     
     @return .2126 * $red + .7152 * $green + .0722 * $blue;
 }
 
 @function linear-rgb($color) {
-    $r: red($color) / 255;
-    $g: green($color) / 255;
-    $b: blue($color) / 255;
+    $r: calc(color.channel($color, "red", $space: rgb) / 255);
+    $g: calc(color.channel($color, "green", $space: rgb) / 255);
+    $b: calc(color.channel($color, "blue", $space: rgb) / 255);
     
-    $r: if($r <= .03928, $r / 12.92, pow(($r + .055) / 1.055, 2.4));
-    $g: if($g <= .03928, $g / 12.92, pow(($g + .055) / 1.055, 2.4));
-    $b: if($b <= .03928, $b / 12.92, pow(($b + .055) / 1.055, 2.4));
+    $r: if($r <= .03928, calc($r / 12.92), math.pow(calc(($r + .055) / 1.055), 2.4));
+    $g: if($g <= .03928, calc($g / 12.92), math.pow(calc(($g + .055) / 1.055), 2.4));
+    $b: if($b <= .03928, calc($b / 12.92), math.pow(calc(($b + .055) / 1.055), 2.4));
     
     @return ($r, $g, $b);
 }
