--- a/src/definitions/components/pagination.scss
+++ b/src/definitions/components/pagination.scss
@@ -1,3 +1,5 @@
+@use 'sass:color';
+
 .#{$ns}-pagination {
   display: flex;
   outline: 0;
@@ -43,7 +45,7 @@
       }
       &.active {
         background-color: $primary;
-        border-color: darken($primary, 10);
+        border-color: color.adjust($primary, $lightness: 10%);
         color:#fff;
         pointer-events: none
       }
