--- a/src/theme.gcloud.scss
+++ b/src/theme.gcloud.scss
@@ -1,4 +1,7 @@
-// @import './assets/xeicon.min.css';
+// @forward 'theme/gcloud/bases/colors.scss';
+// @forward 'theme/gcloud/bases/variables.scss';
+// @forward 'utils/func.scss';
+
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @import url('https://cdn.jsdelivr.net/gh/xpressengine/XEIcon/xeicon.min.css');
 
