--- a/src/themes/gcloud/bases/variables.scss
+++ b/src/themes/gcloud/bases/variables.scss
@@ -1,19 +1,24 @@
+@use './colors.scss' as *;
+@use 'sass:color';
 @use 'sass:map';
 @use 'sass:math';
 
-@use './colors.scss' as *;
+$baseFontSize: 14;
+
 
 @function relativePx($number) {
-    @return calc($number/14)*1em
+    @return calc($number/$baseFontSize)*1em
 };
 
 @function absolutePx($number) {
-    @return calc($number/14)*1rem
+    @return calc($number/$baseFontSize)*1rem
 };
 
 // namespace
 
 $ns: 'ga';
+
+// referrence
 
 $grays: (
     "gray-0": #ffffff,
@@ -39,6 +44,7 @@ $black: map.get($grays, 'gray-95');
 //font family
 //
 $fontName: 'Ubuntu';
+$fontSize: calc($baseFontSize * 1px);
 $fontSmoothing: antialiased;
 $baseFontColor: $black;
 $dModeBaseFontColor: $white;
@@ -46,14 +52,14 @@ $dModeBaseFontColor: $white;
 //font weight
 //
 $light: 300;
-$regular: 400;
-$bold: 600;
-$bolder: 800;
+$regular: 500;
+$bold: 700;
+$bolder: 900;
 
 //
 //line height
 //
-$lineHeight: calc(18 / 14);
+$lineHeight: calc(18 / $baseFontSize);
 
 //
 //letter spacing
@@ -67,8 +73,9 @@ $narrowerSpacing: -1px;
 //
 //border color
 //
-$borderColor:  map.get($grays, 'gray-15');;
-$borderDarkColor: darken($borderColor, 27.4);
+$borderColor:  map.get($grays, 'gray-15');
+$borderDarkColor:  map.get($grays, 'gray-25');
+
 
 //
 //base background color
@@ -109,16 +116,22 @@ $surface: #f2f2f2;
 $surfaceHover: #F4F4F4;
 
 $gray: #909090;
-$lightGray: lighten($gray, 16.1);
-$darkGray: lighten($black, 20.4);
+$lightGray: color.adjust($gray, $lightness: 16.1%);
+$darkGray: color.adjust($black, $lightness: 20.4%);
 
-$darkPrimary: darken(saturate($primary, 0), 10.6);
-$darkSecondary: darken($secondary, 35.7);
-$darkerPrimary: darken(saturate($primary, 0), 20.8);
-$darkerSecondary: darken($secondary, 58.1);
+$darkPrimary: color.adjust(
+  color.adjust($primary, $saturation: 0%),
+  $lightness: -10.6%
+);
+$darkSecondary: color.adjust($secondary, $lightness: -35.7%);
+$darkerPrimary: color.adjust(
+  color.adjust($primary, $saturation: 0%),
+  $lightness: -20.8%
+);
+$darkerSecondary: color.adjust($secondary, $lightness: -58.1%);
 
-$lightPrimary: lighten($primary, 35);
-$lightSecondary: lighten($secondary, 35);
+$lightPrimary: color.adjust($primary, $lightness: 35%);
+$lightSecondary: color.adjust($secondary, $lightness: 35%);
 
 $surface1: #F8F8F8;
 $surface2: #EFF4FC;
@@ -144,11 +157,11 @@ $brandColors: (
 );
 
 $stateColors: (
-    'success': ($success, darken($greenColor, 10), $white, $lightSuccess),
-    'info': ($info, darken($info, 10), $infoText, $lightInfo),
-    'danger': ($danger, darken($danger, 10), $dangerText, $lightDanger),
-    'attention': ($attention, darken($attention, 10), $attentionText, $lightAttention),
-    'importance': ($importance, darken($importance, 10), $importanceText, $lightImportance),
+    'success': ($success, color.adjust($greenColor, $lightness: -10%), $white, $lightSuccess),
+    'info': ($info, color.adjust($info, $lightness: -10%), $infoText, $lightInfo),
+    'danger': ($danger, color.adjust($danger, $lightness: -10%), $dangerText, $lightDanger),
+    'attention': ($attention, color.adjust($attention, $lightness: -10%), $attentionText, $lightAttention),
+    'importance': ($importance, color.adjust($importance, $lightness: -10%), $importanceText, $lightImportance),
 );
 
 @function grayHsl($per) {
@@ -170,22 +183,22 @@ $colors: (
     'gray': map.get($gray-palette, 500),
 );
 $colors2: (
-        'red': #D93B3B,
-        'sunset': #D44D32,
-        'orange': #D95B2C,
-        'amber': #D3873F,
-        'yellow': #F5B54D,
-        'citron': #CAC747,
-        'lime': #85AB39,
-        'green': #48992F,
-        'mint': #3A874F,
-        'teal': #449698,
-        'cyan': #4D9BCC,
-        'blue': #4E7AF8,
-        'indigo': #5642ED,
-        'purple': #8756F3,
-        'pink': #BF3DA0,
-        'rose': #BB3A62,
+    'red': #D93B3B,
+    'sunset': #D44D32,
+    'orange': #D95B2C,
+    'amber': #D3873F,
+    'yellow': #F5B54D,
+    'citron': #CAC747,
+    'lime': #85AB39,
+    'green': #48992F,
+    'mint': #3A874F,
+    'teal': #449698,
+    'cyan': #4D9BCC,
+    'blue': #4E7AF8,
+    'indigo': #5642ED,
+    'purple': #8756F3,
+    'pink': #BF3DA0,
+    'rose': #BB3A62,
 );
 
 $light-level: 50;
@@ -216,12 +229,12 @@ $h4: absolutePx(16);
 $h5: absolutePx(14);
 
 //Size
-$tinySize: calc(10 / 14);
-$smallSize: calc(12 / 14);
-$mediumSize: calc(14 / 14);
-$largeSize: calc(18 / 14);
-$hugeSize: calc(20 / 14);
-$massiveSize: calc(24 / 14);
+$tinySize: relativePx(10);
+$smallSize: relativePx(12);
+$mediumSize: relativePx(14);
+$largeSize: relativePx(18);
+$hugeSize: relativePx(26);
+$massiveSize: relativePx(32);
 
 // Scroll Bars
 
